--- a/main.css
+++ b/main.css
@@ -4,16 +4,17 @@
 
 body {
   font-family: Arial;
-  padding: 20px;
+  padding: 15px;
   background: #000000;
 }
 
 /* Header/Blog Title */
 .header {
-  padding: 30px;
+  padding: 5px;
   font-size: 40px;
   text-align: center;
-  background: white;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  background: rgb(128, 128, 128);
 }
 
 /* Create two unequal columns that floats next to each other */
@@ -40,8 +41,8 @@ body {
 /* Add a card effect for articles */
 .card {
   background-color: white;
-  padding: 20px;
-  margin-top: 20px;
+  padding: 10px;
+  margin-top: 10px;
 }
 
 /* Clear floats after the columns */
@@ -54,8 +55,9 @@ body {
 /* Footer */
 .footer {
   padding: 20px;
-  text-align: center;
-  background: #ddd;
+  font-size: 6px;
+  text-align: left;
+  background: rgb(128, 128, 128);
   margin-top: 20px;
 }
 
@@ -65,4 +67,9 @@ body {
     width: 100%;
     padding: 0;
   }
+}
+
+h5{
+    font-family: 'Times New Roman', Times, serif;
+    color: gray;
 }
