--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-family: Arial;
+  font-family: Impact;
   padding: 20px;
   background: #000000;
 }
@@ -65,13 +65,9 @@ body {
     width: 100%;
     padding: 0;
   }
-<<<<<<< Updated upstream
-}
-=======
-}
+
 
 h5{
     font-family: 'Times New Roman', Times, serif;
     color: gray;
 } 
->>>>>>> Stashed changes
