--- a/main.css
+++ b/main.css
@@ -59,6 +59,10 @@ body {
   background: #ddd;
   margin-top: 20px;
 }
+h5{
+    font-family: 'Times New Roman';
+    color: gray;
+} 
 
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
@@ -68,8 +72,4 @@ body {
   }
 
 
-h5{
-    font-family: 'Times New Roman', Times, serif;
-    color: gray;
-} 
 
