--- a/main.css
+++ b/main.css
@@ -5,24 +5,23 @@
 :root{
 
   --darktheme: black;
-  --WhiteTheme: gray;
+  --WhiteTheme: rgb(63, 0, 49);
   --test: linear-gradient(to right, rgb(2, 2, 2), rgb(44, 44, 44), rgb(91, 92, 91),rgb(44,44,44),rgb(2,2,2));
-  
 }
 
 body {
   font-family: Arial;
   padding: 10px;
-  background: var(--test);
+  background: var(--darktheme);
 }
 
 /* Header/Blog Title */
 .header {
-  padding: 20px;
-  font-size: 40px;
+  padding: 15px;
+  font-size: 20px;
   font-family: Impact;
   text-align: center;
-  background: white;
+  background: rgb(87, 87, 87);
 }
 
 /* Create two unequal columns that floats next to each other */
@@ -48,10 +47,10 @@ body {
 
 /* Add a card effect for articles */
 .card {
-  background-color: white;
-  padding: 20px;
+  background-color: rgb(112, 112, 112);
+  padding: 10px;
   padding-bottom: 10px;
-  margin-top: 20px;
+  margin-top: 15px;
 }
 
 /* Clear floats after the columns */
@@ -63,17 +62,23 @@ body {
 
 /* Footer */
 .footer {
-  padding: 20px;
+  padding: 2px;
   text-align: left;
   color: black;
-  background: #ddd;
+  background: #706f6f;
   margin-top: 20px;
 }
 
 h5{
     font-family: 'Times New Roman';
-    color: gray;
-    border-bottom: solid gray;
+    color: rgb(0, 0, 0);
+    border-bottom: solid rgb(0, 0, 0);
+} 
+
+h2{
+  font-family: 'Times New Roman';
+  color: rgb(0, 0, 0);
+  border-bottom: solid rgb(0, 0, 0);
 } 
 
 
